--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
     position: relative;
     aspect-ratio: 1/1;
     text-align: center;
-    font-size: 3rem;
     display: flex;
+    /* font-size: 3rem; */
     justify-content: center;
     align-items: center;
     cursor: pointer;
